# vectorized-wikipedia-search

./: .gitattributes  .gitignore  README.md
data/processed/: all_articles.txt  articles-1.txt  articles-2.txt  articles-3.txt  articles-4.txt  articles-5.txt  articles-6.txt  articles-7.txt  articles-8.txt  articles-9.txt  keysearch.qry  query_id_mapping.txt  query_tf_idf_vectors.txt  test_pairs.pkl  train_pairs.pkl  training_pairs.pkl
data/raw/: KeySearchWiki-JSON.json  KeySearchWiki-qrels-trec.txt  KeySearchWiki-queries-iri.txt  KeySearchWiki-queries-label.txt  KeySearchWiki-queries-naturalized.txt
data/raw-wiki/: enwiki-latest-pages-articles-multistream-index11.txt-p6899367p7054859.bz2  enwiki-latest-pages-articles-multistream-index12.txt-p8554860p9172788.bz2  enwiki-latest-pages-articles-multistream-index13.txt-p10672789p11659682.bz2  enwiki-latest-pages-articles-multistream-index23.txt-p44788942p46288941.bz2  enwiki-latest-pages-articles-multistream-index4.txt-p311330p558391.bz2  enwiki-latest-pages-articles-multistream-index5.txt-p558392p958045.bz2  enwiki-latest-pages-articles-multistream-index6.txt-p958046p1483661.bz2  enwiki-latest-pages-articles-multistream-index7.txt-p1483662p2134111.bz2  enwiki-latest-pages-articles-multistream-index8.txt-p2134112p2936260.bz2
data/results/: queries_scored.txt
rust/: Cargo.toml
rust/src/: main.rs  query_vectorizer.rs
src/: article_extractor.py  data_loader.py  dataset.py  evaluator.py  group_articles.py  query_vectorizer.py  result_rewriter.py
